stabilize ConnectivityLogPublishingIT by using the connectionId as Kafka topic in the fluent-bit.conf * also stabilize ThingsServerSentEventIT
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>